# chatgpt-template-maker

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
api/: exceptions.py  settings.py
api/models/: __init__.py  dev_models.py
api/models/openai_models/: __devmodels.py  __response.py
api/services/: __chatgpt_client.py  __chatgpt_wrapper.py  __init__.py
gpt4api/: Dockerfile  app.py  manage.py  pyproject.toml
gpt4api/gpt4api/: asgi.py  settings.py  urls.py  views.py  wsgi.py
gpt4api/gpt4api/templates/: index.html
py/: .flake8  Dockerfile  app.py  main.py  pyproject.toml  pytest.ini  run.sh
py/api/: settings.py
py/api/models/: openai_protocols.py
py/api/models/openai_models/: __init__.py  __request.py
py/src/: main.py
py/src/templates/: index.html
py/templates/: index.html
py/utils/: download-vscode-server.sh
python/: main.py
python/api/services/: __init__.py
python/tests/: test_api_models_dev_models_prompt.py  test_api_service___chatgpt_wrapper.py
rs/: Cargo.toml
rs/app/: Cargo.toml
rs/app/src/: main.rs
rs/cli/: Cargo.toml
rs/cli/src/: helper.rs  lib.rs
rs/cli/src/templates/: gitagpt.rs  mod.rs
rs/src/: helper.rs  main.rs
tests/: test_api_models_dev_models_prompt.py  test_api_models_dev_models_promptbuffer.py  test_api_service___chatgpt_wrapper.py
