[tool.poetry]
name = "sasta-chat-gpt-4"
version = "0.1.0"
description = "Access ChatGPT-4 API using personal account."
authors = ["Nitesh Singh Jaswal <nitesh.jaswal@signify.com>", "Ankit Mathur <val.mathur@gmail.com>"]
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
pytest-env = "^0.8.1"
pytest-mypy = "^0.10.3"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
