[package]
name = "epdf-openai-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.10.1"
femme = "2.2.1"
log = "0.4.17"
serde = { version = "1.0.158", features = ["derive"] }
tiktoken-rs = "0.3.3"
tokio = { version = "1.26.0", features = ["full"] }
warp = "0.3.3"
